@@ -1,3 +1,8 @@
+Fri Jun 21 10:21:44 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (heaps_header/heaps_slot): embed bitmaps into heaps_slot.
+	  no need to maintain allocation/free bitmaps.
+
 Fri Jun 21 09:22:16 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (slot_sweep_body): add counters at a time.
